LPS-96692 Using thread to test, instead of process.